--- a/views/questions.handlebars
+++ b/views/questions.handlebars
@@ -1,69 +1,78 @@
 <section class="p-5 m-5">
   <div class="question-container">
-    <div class="row text-center g-4 justify-content-center align-top">
+    <div class="row g-4 justify-content-center align-top">
       <div class="col-md-8">
-        <div class="card question-card text-dark m-5" id="question-card">
-          <div class="card-body text-center">
-            <h3
-              class="card-title mb-3"
-              id="generate-question"
-            >{{Quiz.dataValues.question}}</h3>
-            <div class="answer-buttons">
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="exampleRadios"
-                  id="exampleRadios1"
-                  value="option1"
-                  checked
-                />
-                <label class="form-check-label" for="exampleRadios1">
-                  {{answerA}}
-                </label>
+        <div
+          class="card question-card text-dark m-5 {{backgroundColor}}"
+          id="question-card"
+        >
+          <div class="card-body">
+            {{#each triviaQuestion}}
+              <h3
+                class="card-title mb-3"
+                id="generate-question"
+              >{{question}}</h3>
+              <div class="answer-buttons">
+                <div class="form-check">
+                  <input
+                    class="form-check-input"
+                    type="radio"
+                    name="exampleRadios"
+                    id="exampleRadios1"
+                    value="option1"
+                    checked
+                  />
+                  <label class="form-check-label" for="exampleRadios1">
+                    {{answerA}}
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input
+                    class="form-check-input"
+                    type="radio"
+                    name="exampleRadios"
+                    id="exampleRadios2"
+                    value="option2"
+                  />
+                  <label class="form-check-label" for="exampleRadios2">
+                    {{answerB}}
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input
+                    class="form-check-input"
+                    type="radio"
+                    name="exampleRadios"
+                    id="exampleRadios2"
+                    value="option2"
+                  />
+                  <label class="form-check-label" for="exampleRadios2">
+                    {{answerC}}
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input
+                    class="form-check-input"
+                    type="radio"
+                    name="exampleRadios"
+                    id="exampleRadios2"
+                    value="option2"
+                  />
+                  <label class="form-check-label" for="exampleRadios2">
+                    {{answerD}}
+                  </label>
+                </div>
               </div>
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="exampleRadios"
-                  id="exampleRadios2"
-                  value="option2"
-                />
-                <label class="form-check-label" for="exampleRadios2">
-                  {{answerB}}
-                </label>
+              <div>
+                <button
+                  type="button"
+                  id="questionbtn"
+                  class="btn btn-dark mt-3"
+                >
+                  Submit
+                </button>
               </div>
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="exampleRadios"
-                  id="exampleRadios2"
-                  value="option2"
-                />
-                <label class="form-check-label" for="exampleRadios2">
-                  {{answerC}}
-                </label>
-              </div>
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="exampleRadios"
-                  id="exampleRadios2"
-                  value="option2"
-                />
-                <label class="form-check-label" for="exampleRadios2">
-                  {{answerD}}
-                </label>
-              </div>
-            </div>
-            <div>
-              <button type="button" id="questionbtn" class="btn btn-dark">
-                Submit
-              </button>
-            </div>
+            {{/each}}
           </div>
         </div>
       </div>
